force-app/main/default/objects/Order/fields/Authorized_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Purchaser__c</fullName>
    <label>Authorized Purchaser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>