force-app/main/default/objects/Order/fields/B2B_504_Error__c.field-meta.xml
<CustomField>
    <fullName>B2B_504_Error__c</fullName>
    <label>B2B 504 Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>