force-app/main/default/objects/Order/fields/B2B_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>B2B Order Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>