force-app/main/default/objects/Order/fields/Cancellation_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Code__c</fullName>
    <label>Cancellation Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>