force-app/main/default/objects/Order/fields/Common_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Common_Carrier__c</fullName>
    <label>Common Carrier</label>
    <length>5</length>
    <type>Text</type>
</CustomField>