force-app/main/default/objects/Order/fields/Common_Carrier_Store_Num__c.field-meta.xml
<CustomField>
    <fullName>Common_Carrier_Store_Num__c</fullName>
    <label>Common Carrier Store Num</label>
    <length>5</length>
    <type>Text</type>
</CustomField>