force-app/main/default/objects/Order/fields/Credit_Card_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Display_Name__c</fullName>
    <label>Credit Card Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>