force-app/main/default/objects/Order/fields/Credit_Card_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Expiry__c</fullName>
    <label>Credit Card Expiry</label>
    <length>4</length>
    <type>Text</type>
</CustomField>