force-app/main/default/objects/Order/fields/Credit_Card_UID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_UID__c</fullName>
    <label>Credit Card UID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>