force-app/main/default/objects/Order/fields/Current_User_is_CSS_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_CSS_on_Account__c</fullName>
    <formula>IF(  Account.CSS__c  = $User.Id, True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is CSS on Account?</label>
    <type>Checkbox</type>
</CustomField>