force-app/main/default/objects/Order/fields/Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Instruction__c</fullName>
    <label>Delivery Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>