force-app/main/default/objects/Order/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Schedule</label>
    <referenceTo>Delivery_Schedule__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>