force-app/main/default/objects/Order/fields/District_Id__c.field-meta.xml
<CustomField>
    <fullName>District_Id__c</fullName>
    <label>District Id</label>
    <length>5</length>
    <type>Text</type>
</CustomField>