force-app/main/default/objects/Order/fields/DOS_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>DOS_Order_Number__c</fullName>
    <label>DOS Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>