force-app/main/default/objects/Order/fields/Geo_Code__c.field-meta.xml
<CustomField>
    <fullName>Geo_Code__c</fullName>
    <label>Geo Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>