force-app/main/default/objects/Order/fields/Haulaway_Charge__c.field-meta.xml
<CustomField>
    <fullName>Haulaway_Charge__c</fullName>
    <label>Haulaway Charge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>