force-app/main/default/objects/Order/fields/isCommonCarrier__c.field-meta.xml
<CustomField>
    <fullName>isCommonCarrier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCommonCarrier</label>
    <type>Checkbox</type>
</CustomField>