force-app/main/default/objects/Order/fields/of_Appliances__c.field-meta.xml
<CustomField>
    <fullName>of_Appliances__c</fullName>
    <label># of Lines</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>