force-app/main/default/objects/Order/fields/Order_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>Order Reference Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>