force-app/main/default/objects/Order/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Standard Team</fullName>
            </value>
            <value>
                <fullName>Premier Team</fullName>
            </value>
            <value>
                <fullName>Contract Team</fullName>
            </value>
            <value>
                <fullName>Web Team</fullName>
            </value>
            <value>
                <fullName>Inside Sales Team</fullName>
            </value>
            <value>
                <fullName>Opstech</fullName>
            </value>
            <value>
                <fullName>OMS</fullName>
                <isActive>false</isActive>
                <label>OMS</label>
            </value>
            <value>
                <fullName>Website</fullName>
                <isActive>false</isActive>
                <label>Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>