force-app/main/default/objects/Order/fields/Origin_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Origin_Order_Date__c</fullName>
    <label>Origin Order Date</label>
    <type>Date</type>
</CustomField>