force-app/main/default/objects/Order/fields/Other_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Other_Taxes__c</fullName>
    <label>Other Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>