force-app/main/default/objects/Order/fields/Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Reason__c</fullName>
    <label>Pending Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started Onboarding Process</fullName>
            </value>
            <value>
                <fullName>Sent for Signature</fullName>
            </value>
            <value>
                <fullName>Onboarding Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>