force-app/main/default/objects/Order/fields/Post_Sales_Manager_Lead__c.field-meta.xml
<CustomField>
    <fullName>Post_Sales_Manager_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Sales Manager/ Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>