force-app/main/default/objects/Order/fields/PreHour_Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>PreHour_Trigger_Time__c</fullName>
    <label>PreHour Trigger Time</label>
    <type>DateTime</type>
</CustomField>