force-app/main/default/objects/Order/fields/Premium_Delivery_Charge__c.field-meta.xml
<CustomField>
    <fullName>Premium_Delivery_Charge__c</fullName>
    <label>Premium Delivery Charge</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>