force-app/main/default/objects/Order/fields/Purchase_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Number__c</fullName>
    <label>Purchase Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>