force-app/main/default/objects/Order/fields/Recursion_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Recursion_Blocker__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Recursion Blocker</label>
    <type>Checkbox</type>
</CustomField>