force-app/main/default/objects/Order/fields/Rejection_Status__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Status__c</fullName>
    <label>Rejection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Rejected</fullName>
            </value>
            <value>
                <fullName>Need to add</fullName>
            </value>
            <value>
                <fullName>Nothing Rejected</fullName>
            </value>
            <value>
                <fullName>Partially Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>