force-app/main/default/objects/Order/fields/Reschedule_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason_Code__c</fullName>
    <label>Reschedule Reason Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>