force-app/main/default/objects/Order/fields/RMA_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Order_Number__c</fullName>
    <label>RMA Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>