force-app/main/default/objects/Order/fields/SAP_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SAP_Created_Date__c</fullName>
    <label>SAP Created Date</label>
    <type>DateTime</type>
</CustomField>