force-app/main/default/objects/Order/fields/SAP_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>SAP_Net_Value__c</fullName>
    <label>SAP Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>