force-app/main/default/objects/Order/fields/Shipping_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_First_Name__c</fullName>
    <label>Shipping Contact First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>