force-app/main/default/objects/Order/fields/Shipping_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact_Phone__c</fullName>
    <label>Shipping Contact Phone</label>
    <type>Phone</type>
</CustomField>