force-app/main/default/objects/Order/fields/ShipTo_Name__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Name__c</fullName>
    <label>ShipTo Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>