force-app/main/default/objects/Order/validationRules/Order_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Status ) , OR(TEXT(PRIORVALUE( Status ))==&quot;Complete&quot;, TEXT(PRIORVALUE( Status ))==&quot;Rejected&quot;) )</errorConditionFormula>
    <errorMessage>The status of order, once completed, cannot be changed</errorMessage>
</ValidationRule>