force-app/main/default/objects/Order/listViews/Adjustments_to_be_Approved.listView-meta.xml
<ListView>
    <fullName>Adjustments_to_be_Approved</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>B2B_Order_Id__c</columns>
    <columns>Parent_Order__c</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Gross_Amount__c</columns>
    <columns>Purchase_Number__c</columns>
    <columns>Delivery_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Adjustment Created,Adjustment Approval,Adjustment Ready for Submission,Adjustment Submitted but Waiting on B2B,Submitted</value>
    </filters>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Return,Exchange</value>
    </filters>
    <label>Adjustments to be Approved</label>
</ListView>