force-app/main/default/objects/Order/listViews/All_Orders.listView-meta.xml
<ListView>
    <fullName>All_Orders</fullName>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Purchase_Number__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>Gross_Amount__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>