force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>B2B_Order_Id__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Purchase_Number__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>Gross_Amount__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Delivery_Schedule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>iuser</value>
    </filters>
    <label>All Orders</label>
</ListView>