force-app/main/default/objects/Order/listViews/Contract_Orders.listView-meta.xml
<ListView>
    <fullName>Contract_Orders</fullName>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>SBQQ__Quote__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Purchase_Number__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>Gross_Amount__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.CONTRACT_NUMBER</field>
        <operation>notEqual</operation>
    </filters>
    <label>Contract Orders</label>
</ListView>